changed pom.xml